2_devpod/ingress/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devpod
  namespace: kuoss-dev
spec:
  tls:
  - hosts: ['devpod.example.com']
    secretName: tls-example-com 
  ingressClassName: private
  rules:
  - host: devpod.example.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: devpod
            port:
              number: 5173
